# Polaris

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
Polaris/: .gitignore  CLAUDE.md  Makefile  pyproject.toml
docs/: aws_ubuntu_runbook.md  data_dictionary.md  module1_dataharvester_design.md  module1_operations_guide.md  module2_arbitragebot_design.md  module2_implementation_plan.md  module2_operations_guide.md  module2_part2_strategies_efgh.md  module2_part3_execution_architecture.md  module3_optimal_strategy_v2.md  module3_spreadhunter_design.md  module4_agentic_design.md  module4_clawbot_design.md
polaris/: __init__.py  cli.py  config.py  logging.py
tests/: conftest.py  test_arb_clean_compat.py  test_arb_config_rust_mode.py  test_arb_experiments.py  test_arb_live_scan.py  test_arb_replay_real.py  test_arb_reporting.py  test_backup.py  test_clob_prices_parser.py  test_clob_ws_parser.py  test_config_refresh_env.py  test_config_reload.py  test_discovery.py  test_exporter.py  test_exporter_jsonable.py  test_gamma_parsing.py  test_live_harvest_once.py  test_live_sources.py  test_mapping_score.py  test_market_collector_tokens_scope.py  test_module4_cli_helpers.py  test_module4_collapse_filter.py  test_module4_evidence_agent.py  test_module4_family.py  test_module4_llm_semantic_agent.py  test_module4_rule_compiler.py  test_module4_semantic_adjuster.py  test_module4_service_flow.py  test_module4_service_timeouts.py  test_orchestrator_flood_control.py  test_orchestrator_safe_mode.py  test_orchestrator_strategy_health_gate.py  test_order_router_paper_parity.py  (+15 more)
(+98 files in other folders)
