[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polaris"
version = "0.1.0"
description = "Polaris data harvester for Polymarket Elon tweet markets."
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27.0",
  "psycopg[binary,pool]>=3.2.1",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "tenacity>=9.0.0",
  "typer>=0.12.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.4",
]
live = [
  "py-clob-client>=0.25.0",
]

[project.scripts]
polaris = "polaris.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["polaris*"]

[tool.setuptools.package-data]
polaris = ["db/migrations/*.sql"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
  "live: online integration tests against real APIs",
]

[tool.ruff]
line-length = 100
target-version = "py312"
